[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/toolbar/icrailhi.png" type="Texture" id=1]
[ext_resource path="res://assets/toolbar/icreshi.png" type="Texture" id=2]
[ext_resource path="res://assets/toolbar/icairphi.png" type="Texture" id=3]
[ext_resource path="res://assets/toolbar/icdozr.png" type="Texture" id=4]
[ext_resource path="res://assets/toolbar/icind.png" type="Texture" id=5]
[ext_resource path="res://assets/toolbar/icpol.png" type="Texture" id=6]
[ext_resource path="res://assets/toolbar/icroadhi.png" type="Texture" id=7]
[ext_resource path="res://assets/toolbar/icseap.png" type="Texture" id=8]
[ext_resource path="res://assets/toolbar/icnuc.png" type="Texture" id=9]
[ext_resource path="res://assets/toolbar/iccom.png" type="Texture" id=10]
[ext_resource path="res://assets/toolbar/icseaphi.png" type="Texture" id=11]
[ext_resource path="res://assets/toolbar/icqry.png" type="Texture" id=12]
[ext_resource path="res://assets/toolbar/icroad.png" type="Texture" id=13]
[ext_resource path="res://assets/toolbar/icrail.png" type="Texture" id=14]
[ext_resource path="res://assets/toolbar/iccoal.png" type="Texture" id=15]
[ext_resource path="res://assets/toolbar/icstadhi.png" type="Texture" id=16]
[ext_resource path="res://assets/toolbar/icwire.png" type="Texture" id=17]
[ext_resource path="res://assets/toolbar/icfire.png" type="Texture" id=18]
[ext_resource path="res://assets/toolbar/icpolhi.png" type="Texture" id=19]
[ext_resource path="res://core/Selector.gd" type="Script" id=20]
[ext_resource path="res://assets/tilesets/terrain.res" type="TileSet" id=21]
[ext_resource path="res://assets/toolbar/icnuchi.png" type="Texture" id=22]
[ext_resource path="res://assets/toolbar/icstad.png" type="Texture" id=23]
[ext_resource path="res://assets/toolbar/icairp.png" type="Texture" id=24]
[ext_resource path="res://core/map/Terrain.gd" type="Script" id=25]
[ext_resource path="res://assets/toolbar/icparkhi.png" type="Texture" id=26]
[ext_resource path="res://assets/toolbar/icpark.png" type="Texture" id=27]
[ext_resource path="res://assets/toolbar/iccomhi.png" type="Texture" id=28]
[ext_resource path="res://assets/toolbar/icindhi.png" type="Texture" id=29]
[ext_resource path="res://core/Camera.gd" type="Script" id=30]
[ext_resource path="res://assets/toolbar/icdozrhi.png" type="Texture" id=31]
[ext_resource path="res://assets/toolbar/icqryhi.png" type="Texture" id=32]
[ext_resource path="res://assets/toolbar/icres.png" type="Texture" id=33]
[ext_resource path="res://core/gui/toolbar_buttons.tres" type="ButtonGroup" id=34]
[ext_resource path="res://core/gui/toolbar.gd" type="Script" id=35]
[ext_resource path="res://core/City.gd" type="Script" id=36]
[ext_resource path="res://assets/toolbar/iccoalhi.png" type="Texture" id=37]
[ext_resource path="res://assets/toolbar/icfirehi.png" type="Texture" id=38]
[ext_resource path="res://assets/toolbar/icwirehi.png" type="Texture" id=39]
[ext_resource path="res://core/Plots.gd" type="Script" id=40]

[node name="Main" type="Node2D"]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 30 )

[node name="City" type="Node2D" parent="."]
script = ExtResource( 36 )

[node name="Simulator" type="Timer" parent="City"]
wait_time = 2.0
autostart = true

[node name="Terrain" type="TileMap" parent="City"]
tile_set = ExtResource( 21 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 25 )

[node name="Plots" type="Node" parent="City"]
script = ExtResource( 40 )

[node name="Selector" type="TileMap" parent="City"]
visible = false
tile_set = ExtResource( 21 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 20 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Toolbar" type="PanelContainer" parent="GUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 342.0
script = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Toolbar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 123.0
margin_bottom = 341.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityName" type="Label" parent="GUI/Toolbar/VBoxContainer"]
margin_right = 116.0
margin_bottom = 14.0
text = "City Name"
align = 1

[node name="HSeparator" type="HSeparator" parent="GUI/Toolbar/VBoxContainer"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 22.0

[node name="CenterContainer3" type="CenterContainer" parent="GUI/Toolbar/VBoxContainer"]
margin_top = 26.0
margin_right = 116.0
margin_bottom = 152.0

[node name="GridContainer" type="GridContainer" parent="GUI/Toolbar/VBoxContainer/CenterContainer3"]
margin_left = 3.0
margin_right = 113.0
margin_bottom = 126.0
columns = 3

[node name="ResidentialBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_right = 34.0
margin_bottom = 50.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 33 )

[node name="CommercialBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 50.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 10 )

[node name="IndustryBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_left = 76.0
margin_right = 110.0
margin_bottom = 50.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 5 )

[node name="FireStationBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_top = 54.0
margin_right = 34.0
margin_bottom = 88.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 18 )

[node name="QueryBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_left = 38.0
margin_top = 54.0
margin_right = 72.0
margin_bottom = 88.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 12 )

[node name="PoliceStationBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_left = 76.0
margin_top = 54.0
margin_right = 110.0
margin_bottom = 88.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 6 )

[node name="WiresBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_top = 92.0
margin_right = 34.0
margin_bottom = 126.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 39 )
texture_pressed = ExtResource( 17 )

[node name="BulldozeBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_left = 38.0
margin_top = 92.0
margin_right = 72.0
margin_bottom = 126.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 4 )

[node name="ParkBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer"]
margin_left = 76.0
margin_top = 92.0
margin_right = 110.0
margin_bottom = 126.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )

[node name="HBoxContainer4" type="HBoxContainer" parent="GUI/Toolbar/VBoxContainer"]
margin_top = 156.0
margin_right = 116.0
margin_bottom = 180.0

[node name="RailBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/HBoxContainer4"]
margin_right = 56.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 14 )

[node name="RoadBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/HBoxContainer4"]
margin_left = 60.0
margin_right = 116.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 13 )

[node name="CenterContainer2" type="CenterContainer" parent="GUI/Toolbar/VBoxContainer"]
margin_top = 184.0
margin_right = 116.0
margin_bottom = 272.0

[node name="GridContainer5" type="GridContainer" parent="GUI/Toolbar/VBoxContainer/CenterContainer2"]
margin_left = 14.0
margin_right = 102.0
margin_bottom = 88.0
columns = 2

[node name="CoalPowerBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5"]
margin_right = 42.0
margin_bottom = 42.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 15 )

[node name="NuclearPowerBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5"]
margin_left = 46.0
margin_right = 88.0
margin_bottom = 42.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 9 )

[node name="StadiumBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5"]
margin_top = 46.0
margin_right = 42.0
margin_bottom = 88.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 23 )

[node name="SeaportBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5"]
margin_left = 46.0
margin_top = 46.0
margin_right = 88.0
margin_bottom = 88.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="CenterContainer6" type="CenterContainer" parent="GUI/Toolbar/VBoxContainer"]
margin_top = 276.0
margin_right = 116.0
margin_bottom = 334.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Toolbar/VBoxContainer/CenterContainer6"]
margin_left = 29.0
margin_right = 87.0
margin_bottom = 58.0

[node name="AirportBtn" type="TextureButton" parent="GUI/Toolbar/VBoxContainer/CenterContainer6/HBoxContainer"]
margin_right = 58.0
margin_bottom = 58.0
toggle_mode = true
group = ExtResource( 34 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 24 )

[connection signal="timeout" from="City/Simulator" to="City" method="_on_Simulator_timeout"]
[connection signal="selected" from="City/Selector" to="City" method="_on_Selector_selected"]
[connection signal="selected" from="GUI/Toolbar" to="City/Selector" method="_on_Toolbar_selected"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/ResidentialBtn" to="GUI/Toolbar" method="_on_ResidentialBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/CommercialBtn" to="GUI/Toolbar" method="_on_CommercialBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/IndustryBtn" to="GUI/Toolbar" method="_on_IndustryBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/FireStationBtn" to="GUI/Toolbar" method="_on_FireStationBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/QueryBtn" to="GUI/Toolbar" method="_on_QueryBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/PoliceStationBtn" to="GUI/Toolbar" method="_on_PoliceStationBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/WiresBtn" to="GUI/Toolbar" method="_on_WiresBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/BulldozeBtn" to="GUI/Toolbar" method="_on_BulldozeBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer3/GridContainer/ParkBtn" to="GUI/Toolbar" method="_on_ParkBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/HBoxContainer4/RailBtn" to="GUI/Toolbar" method="_on_RailBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/HBoxContainer4/RoadBtn" to="GUI/Toolbar" method="_on_RoadBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5/CoalPowerBtn" to="GUI/Toolbar" method="_on_CoalPowerBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5/NuclearPowerBtn" to="GUI/Toolbar" method="_on_NuclearPowerBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5/StadiumBtn" to="GUI/Toolbar" method="_on_StadiumBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer2/GridContainer5/SeaportBtn" to="GUI/Toolbar" method="_on_SeaportBtn_toggled"]
[connection signal="toggled" from="GUI/Toolbar/VBoxContainer/CenterContainer6/HBoxContainer/AirportBtn" to="GUI/Toolbar" method="_on_AirportBtn_toggled"]
